feat(federation): let federation plugin choose if a plan should be manual or auto validated (#7749)
* feat(federation): let federation plugin choose if a plan should be manual or auto validated

APIM-5357

* fix(subscription): when DCR is activate client id should be found in oauth instead of app settings

APIM-5357